@@ -1,3 +1,8 @@
+2002-02-24  Adam Megacz  <adam@xwt.org>
+
+	* Makefile.am: Added win32_threads.c to sources list.
+	* win32_threads.c: Added two */'s which I had neglected.
+
 2002-02-20  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* Makefile.am: Re-add SUBDIRS parameter which was lost in merge.
